# notification-services

./: .env.dist  .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: unittests.yml
src/: canceled_orders.py  canceled_orders_storage.py  channels_stop_sales.py  cheated_orders.py  cheated_phones.py  clear_canceled_orders_storage.py  clear_cheated_phone_numbers_storage.py  clear_ingredient_stops_storage.py  clear_ingredients_db.py  config.py  ingredient_stop_sales.py  late_delivery_vouchers.py  logger.py  message_queue.py  new_ingredient_stops.py  new_ingredients_storage.py  other_ingredient_stop_sales.py  promo_codes.py  reset_canceled_orders.py  reset_cheated_phone_numbers_count.py  revisions.py  run_cheated_phone_numbers.py  run_new_ingredient_stops.py  settings.py  stocks_balance.py  stop_sales_by_all_ingredients.py  stop_sales_by_channels.py  stop_sales_by_ingredients.py  stop_sales_by_partial_ingredients.py  stop_sales_by_sectors.py  stop_sales_by_streets.py  stop_sales_v1.py  storages.py
src/canceled_orders/: clear_uuids_storage.py  main.py  storage.py
src/cheated_phones/: main.py  rabbitmq.py  reset.py  storage.py
src/core/: __init__.py  config.py  exceptions.py  logging_setup.py  rabbitmq.py
src/db/: __init__.py  mongo_db.py  rabbitmq.py  redis_db.py
src/filters/: __init__.py  base.py  predicates.py  specifications.py
src/ingredient_stop_sales/: db.py  new_ingredient_stops.py  stop_sales.py
src/message_queue_events/: __init__.py  base.py  canceled_order.py  cheated_phone_number.py  daily_ingredient_stop.py  late_delivery_vouchers.py  revision.py  stocks_balance.py  stop_sale_by_channel.py  stop_sale_by_ingredient.py  stop_sale_by_sector.py  stop_sale_by_street.py  used_promo_code.py
src/models/: __init__.py  aliases.py  (+5 more)
systemd/: README.md
tests/: conftest.py  test_canceled_orders_filter.py  test_config.py
(+98 files in other folders)
