[tool.poetry]
name = "dodo__stop-sales"
version = "1.2.0"
description = "Services that generates events about stops and specific types of orders"
authors = ["usbtypec1 <eldos.baktybekov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.3"
pydantic = "^1.10.4"
pika = "^1.3.1"
dodo-is-api = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.1.0"
faker = "^16.6.1"
pytest-httpx = "^0.21.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src",
]